# zk-verification-solidity

./: README.md  ape-config.yaml  pyproject.toml
contracts/: Verifier.sol
tests/: test_verification.py
