[tool.poetry]
name = "zk-verifier-3"
version = "0.1.0"
description = ""
authors = ["JChiaramonte7 <jeremychiaramonte@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
eth-ape = {extras = ["recommended-plugins"], version = "^0.7.7"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
